--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-    "version": 2,
-    "name": "tomato-disease-detection-frontend",
-    "builds": [
-      { "src": "src/index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "src/index.js" }
-    ]
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+}
