--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://tomato-disease-detection-project-c44gqlmrga-as.a.run.app/predict
+REACT_APP_API_URL=https://clownfish-app-4vem7.ondigitalocean.app/predict
